# nix-config

./: README.md  configuration.nix  flake.nix  hardware-configuration.nix  plymouth.nix
dm/: theme.nix
drivers/wifi/: rtl8812au.nix
home/: flake.nix  home.nix  packages.nix  tmux.conf
home/alacritty/: alacritty.yml  default.nix
home/fish/: default.nix
home/fish/functions/: hms.fish  ns.fish  ta.fish
home/htop/: htoprc
home/neovim/: default.nix  plugins.nix
home/neovim/lua/: init.lua  keybinds.lua  lsp.lua  settings.lua  utils.lua
home/neovim/lua/plugins/: autocomplete.lua  barbar.lua  blankline.lua  init.lua  telescope.lua  tree.lua  treesitter.lua  vista.lua
home/ssh/: default.nix
home/test/: builder.sh  result  vim.nix
home/tmux/: default.nix  tmux.conf.local
home/vim/: coc-settings.json  default.nix  plugins.nix  vim.nix  vimrc
home/wm/nm-applet/: default.nix  nm-applet.nix
home/wm/picom/: default.nix  picom.nix
home/wm/polybar/: bar.nix  bars.ini  default.nix  modules.ini
home/wm/polybar/scripts/: monitor.nix
home/wm/rofi/: default.nix  powermenu  result  rofi.nix
home/wm/taffybar/: default.nix  my-taffybar.cabal  result  taffybar.hs  taffybar.nix
home/wm/taffybar/sni/: default.nix
home/wm/xmonad/: default.nix  my-xmonad.cabal  my-xmonad.nix  xmonad-contrib.nix  xmonad-extras.nix  xmonad.hs  xmonad.nix
hosts/: rocinante.nix
