name:                my-taffybar
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , taffybar
		     , text
		     , process
		     , aeson
		     , xdg-basedir
		     , hslogger
		     , gtk-sni-tray
		     , split
		     , bytestring
		     , transformers
		     , hostname
                     , X11>=1.8
  default-language:    Haskell2010
