name:                my-xmonad
version:             0.1.0.0
author:              sharad
maintainer:          sharad.vikram@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , dbus
                     , utf8-string
                     , X11
  default-language:    Haskell2010
